# bms

./: .gitignore  compose-develop.yml  compose-testing.yml  docker-compose.yml  run.sh  test.sh
bms-client/: Dockerfile  index.html  package.json  pnpm-lock.yaml  vite.config.ts
bms-client/src/: App.tsx  routeTree.gen.ts
bms-client/src/components/: layout.tsx  login.tsx
bms-client/src/routes/: __root.tsx  _layout.tsx  index.tsx  login.tsx
bms-server/: Dockerfile  pyproject.toml  pytest.ini
bms-server/bms/: __init__.py  __main__.py
bms-server/bms/api/: __init__.py  dependencies.py  server.py  telemetry.py
bms-server/bms/api/models/: users.py
bms-server/bms/api/routers/: users.py
bms-server/bms/api/services/: users.py
bms-server/tests/: test_security.py
prom/: config.yml
vault/: local.json
