[project]
name = "bms-server"
version = "0.0.1"
description = "Default template for PDM package"
authors = [
    {name = "Es-sehayli Ayoub", email = "ayoub1essehayli@gmail.com"},
]
dependencies = []
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "GPLv3"}


[tool.pdm]
distribution = false
