[project]
name = "bms"
version = "0.0.1"
description = "Default template for PDM package"
authors = [
    {name = "Es-sehayli Ayoub", email = "ayoub1essehayli@gmail.com"},
]
dependencies = ["hvac>=2.3.0"]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "GPLv3"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[tool.pdm.build]
includes = ["bms/"]
