[project]
name = "bms"
version = "0.0.2"
description = "Default template for PDM package"
authors = [
    {name = "Es-sehayli Ayoub", email = "ayoub1essehayli@gmail.com"},
]
dependencies = ["hvac>=2.3.0", "psycopg[binary,pool]>=3.2.4", "sqlglot>=26.3.9", "prometheus-client>=0.21.1", "fastapi[standard]>=0.115.8"]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "GPLv3"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[tool.pdm.build]
includes = ["bms/"]
